# autoref-py

./: .gitignore  CONTRIBUTING.md  README.draft.md  README.md  classes.py  pyproject.toml  requirements.txt  run_bracket.py  run_qualifiers.py  server.py
.github/workflows/: tests.yml
autoref/: __init__.py  autoref.py  beatmap_cache.py  bracket.py  client.py  enums.py  factory.py  lobby.py  models.py  plots.py  qualifiers.py  storage.py  web.py
autoref/controllers/: __init__.py  bracket.py  factory.py  qualifiers.py
autoref/core/: __init__.py  _state_snapshot.py  base.py  beatmap_cache.py  commands.py  enums.py  lobby.py  models.py  output.py  pool_store.py  pp_calc.py  score_fetcher.py  stats.py  storage.py
autoref/core/ref/: __init__.py  announcer.py  base.py  broker.py  chooser.py  persister.py  player.py  scorer.py
autoref/core/stats/: __init__.py  aggregate.py  leaderboard.py  (+2 more)
autoref/static/: app.js  index.html  style.css
autoref/web/: __init__.py  _state.py  server.py
docs/: autoref.md  pool-builder.md  stats.md
scripts/: seed_db.py  stats_poc.py
tests/: test_autoref.py  test_bracket.py  test_difficulty_mods.py  test_enums.py  test_lobby.py  test_models.py  test_new_features.py  test_plots.py  test_qualifiers.py  test_score_fetcher.py  test_stats.py  test_storage.py
tests/fixtures/: 2v2_picks_bans.csv  2v2_players.csv  2v2_round_of_16_mappool.csv  2v2_round_of_16_scores.csv  di_picks_bans.csv  di_players.csv  di_qualifiers_scores.csv  di_round_of_32_mappool.csv  di_round_of_32_scores.csv  qualifiers_4wc_expected.csv  qualifiers_4wc_scores.csv
(+68 files in other folders)
